Removed virtual scroll and added fixed header.
This solution offers way better table scrolling and dispaly. Virtual scroll cut off some items and didnt offer horizontal scroll out of the box.

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -24,6 +24,3 @@ input[type="number"]::-webkit-outer-spin-button, input[type="number"]::-webkit-i
 
 ::-webkit-scrollbar
   display: none
-
-body
-  overflow: hidden
